--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -5,3 +5,22 @@ body, html {
     color: black;
     background-color: white;
 }
+
+header {
+    display: flex;
+    background-color: red;
+    height: 80px;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+header > img {
+    width: 50px;
+    height: auto
+}
+
+header > h2 {
+    font-size: 20px;
+    color: white;
+}
