--- a/src/styles/hobbies.css
+++ b/src/styles/hobbies.css
@@ -7,12 +7,14 @@
 
 .postcard {
     width: 45%;
+    height: 400px;
     display: flex;
     flex-wrap: wrap;
     column-gap: 15px;
     border-style: solid;
     border-width: 1px;
     border-color: black;
+    position: relative;
 }
 
 .postcard > img {
@@ -21,8 +23,16 @@
     object-fit: cover;
 }
 
+.postcard .stamp-container {
+    display: flex;
+    position: absolute;
+    justify-content: right;
+    top: 0;
+    right: 0;
+}
+
 .postcard .stamp {
-    height: 55px;
+    height: 80px;
     width: auto;
     object-fit: cover;
     margin: 0;
