rendered journal entries using componenents

--- a/src/styles/navlist.css
+++ b/src/styles/navlist.css
@@ -4,6 +4,7 @@
     align-items: center;
     margin-bottom: 10px;
     margin-top: 0px;
+    background-color: wheat;
 }
 
 .navlist-container ul {
