--- a/src/styles/links.css
+++ b/src/styles/links.css
@@ -2,13 +2,48 @@
     width: 100%;
     max-width: 800px;
     margin: 40px auto;
-    border: 3px solid #0f0;
     border-radius: 8px;
+    margin-left: 40px;
 }
 
 
 .flightboard-header,
 .flight-row {
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr 3fr 3fr 1fr 2fr;
+    margin-left: 40px;
 }
+
+.flight-row {
+    margin-bottom: 15px;
+}
+
+
+.flightboard-header span {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.flight-row span {
+    font-size: 25px;
+}
+
+.flight-row img {
+    display: flex;
+    width: 200px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+}
+
+
+.flight-row .flight-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
