--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,9 +1,14 @@
 body, html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     color: black;
     background-color: white;
+}
+
+a, .link {
+    color: #004085;
+    font-weight: 300;
 }
 
 header {
