--- a/src/styles/links.css
+++ b/src/styles/links.css
@@ -20,7 +20,7 @@
 
 .flight-row .remarks {
     display: flex;
-    background-color: blue;
+    /* background-color: blue; */
     border-radius: 5px;
     width: 200px; 
   }
