--- a/src/styles/links.css
+++ b/src/styles/links.css
@@ -1,3 +1,10 @@
+.page-container {
+    position: relative;
+    width: 100vw;
+    min-height: 100vh;
+    background-color: #F5F5F5;
+}
+
 .flightboard {
     width: 100%;
     max-width: 800px;
