--- a/src/styles/boarding_ticket.css
+++ b/src/styles/boarding_ticket.css
@@ -54,7 +54,12 @@
 
 .header-left-column {
     grid-template-columns: 0.5fr 1fr 1fr;
-    text-align: center;
+    text-align: left;
+}
+
+.header-left-column p {
+    font-weight: 500;
+    font-size: 24px;
 }
 
 .header img {
@@ -101,12 +106,19 @@
 }
 
 
-.top-row-boxes, .bottom-row-boxes p {
+.top-row-boxes p {
     line-height: 1.5;
+    font-size: 20px;
 }
 
-.top-row-boxes p {
-    font-size: 20px;
+
+.bottom-row-boxes p {
+    line-height: 0.1;
+}
+
+.bottom-row-boxes .key {
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .top-row-boxes p.from-to {
